--- a/fumefusion/.vscode/settings.json
+++ b/fumefusion/.vscode/settings.json
@@ -11,6 +11,8 @@
         "material.h": "c",
         "hit.h": "c",
         "math.h": "c",
-        "sphere.h": "c"
+        "sphere.h": "c",
+        "cassert": "cpp",
+        "cmath": "c"
     }
 }
